app/assets/stylesheets/application.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any styles
 * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
 * file per style scope.
 *
 *= require jquery-ui/core
 *= require jquery-ui/progressbar
 *= require ../javascripts/jquery-file-upload/css/jquery.fileupload.css
 *= require bootstrap.min
 *= require bootstrap-overrides
 *= require magnific-popup
 *= require_self
 */

body {
    font-family: 'Open Sans', sans-serif;
}

.photo-container {

}

.photo-elem {
	margin-bottom: 4px;
	margin-right: 3px;
	display:inline-block;
}
.photo-elem img {
	max-width: 100%;
	max-height: 100%;
}

.album {
	/*
	max-width: 140px;
	*/
	max-height: 140px;
	margin-right: 2px;
	margin-bottom: 5px;
	display: inline-block;
	vertical-align: top;
	position: relative;
}

.album img {
	height: 140px;
	width: 140px;
	/*
	-webkit-filter: grayscale(100%);
	-moz-filter: grayscale(100%);
	filter: grayscale(100%);
	*/
}

.album .image {
	display: inline-block;
}
/*
.album .details {
	display: block;
	vertical-align: top;
}
*/
.album .details {
	display: block;
	vertical-align: top;
	position: absolute;
	left: 0;
	bottom: 0;
	z-index: 100;
	
	width: 100%;
	height: 75px;
	padding-left: 5%;
	padding-right: 5%;
	
	text-align: left;
	color: white;

	
	background: black;
	background: rgba(0,0,0,0.6);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, rgba(0,0,0,0)), color-stop(100%, rgba(0,0,0,0.6)));
	background: -webkit-linear-gradient(top, rgba(0,0,0,0) 0%, rgba(0,0,0,0.6) 100%);
	background: -webkit-gradient(linear, left top, left bottom, from(rgba(0,0,0,0)), to(rgba(0,0,0,0.6)));
	background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.6) 100%);	
	
	font-weight: 200;
}

.album .details h4 {
	position: absolute;
	bottom: 10px;
	left: 10px;
	padding-right: 5px;
}

.album .details a {
	color: white;
	font-weight: 200;
}

/* iPad and up */
@media (min-width: 768px) {
	.album {
		max-width: 240px;
		max-height: 240px;
	}
	.album img {
		height: 240px;
		width: 240px;
	}
	.photo-elem img {
		max-height: 480px;
	}
}
/* Medium desktops and up */
@media (min-width: 992px) {
	
}
/* Large desktops and up */
@media (min-width: 1200px) {
	.album {
		max-width: 290px;
		max-height: 290px;
	}
	.album img {
		width: 290px;
		height: 290px;
	}
	.album {
		margin-right: 15px;
		margin-bottom: 20px;
	}
	.photo-elem img {
		max-height: 480px;
	}
}




/* Upload stuff */
.progress {
  max-width: 600px;
  margin:    0.2em 0 0.2em 0;
}

.progress .bar {
  height:  1.2em;
  padding: 0.2em;
  color:   white;
  display: none;
}




/* Fading-in of photos */
@-webkit-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-moz-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@-o-keyframes fadeIn { from { opacity:0; } to { opacity:1; } }
@keyframes fadeIn { from { opacity:0; } to { opacity:1; } }

.photo-elem img, .album img {
	/* Hide images by default. Fade in via imageLoaded and CSS3 animation (doesn't work in IE 8 + 9) */
	opacity: 0;
}

/* CSS3 animation to fade in image. fadeIn class applied in javascript when images has loaded
	Doesn't work in IE < 10
 */
.fadeIn, .photo-elem img.fadeIn, .album img.fadeIn {
  -webkit-animation:fadeIn ease-in 1;
  -moz-animation:fadeIn ease-in 1;
  -o-animation:fadeIn ease-in 1;
  animation:fadeIn ease-in 1;	  
  
  -webkit-animation-fill-mode:forwards;
  -moz-animation-fill-mode:forwards;
  -o-animation-fill-mode:forwards;
  animation-fill-mode:forwards;
		  
  -webkit-animation-duration:0.5s;
  -moz-animation-duration:0.5s;
  -o-animation-duration:0.5s;
  animation-duration:0.5s;			  

  opacity: 1; 
}

